--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'QA'
 - !lcsh 'Algebra -- Problems, exercises, etc.'
+- GITenberg
 title: A Review of Algebra
 url: http://www.gutenberg.org/ebooks/38536
